test/tests/compiler/18_structures/invalid_parse/dot_no_left_expr.plx
pub fn main(none) i32 {
    return .a  # a dot operator can only appear after an expression
}
